# Bread-Render

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
demo/: main.cpp
include/: brl.hpp  brl_batching.hpp  brl_builtin_mesh.hpp  brl_builtin_shaders.hpp  brl_camera.hpp  brl_color.hpp  brl_commandbuffer.hpp  brl_framebuffer.hpp  brl_imgui.hpp  brl_import_obj.hpp  brl_render.hpp  brl_render_command.hpp  brl_scene.hpp  brl_shader.hpp  brl_vertexbuffer.hpp  brl_viewport.hpp  brl_window.hpp
src/: brl_batching.cpp  brl_camera.cpp  brl_commandbuffer.cpp  brl_framebuffer.cpp  brl_import_obj.cpp  brl_render.cpp  brl_render_command.cpp  brl_scene.cpp  brl_shader.cpp  brl_vertexbuffer.cpp  brl_viewport.cpp  brl_window.cpp
